--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 .list {
@@ -27,17 +30,28 @@ body {
   text-decoration: none;
 }
 
-/* Logo */
+/* Logo Head and Foot*/
+.logo-head,
+.logo-foot {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
+}
 .logo-head {
   color: var(--primary-text-color);
-  text-decoration: none;
 }
 .logo-head .blue,
 .logo-foot .blue {
   color: var(--accent-text-color);
 }
+.logo-foot {
+  color: var(--primary-white-color);
+}
 
 /* Site nav */
+
 .site-nav .link {
   color: var(--primary-text-color);
 }
@@ -58,30 +72,54 @@ body {
   color: var(--accent-text-color);
 }
 
+/* Site nav + Header contacts FONTS */
+.site-nav,
+.header-contacts {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
 /* Fooooter */
 footer {
   background-color: var(--footer-bg-color);
 }
-.logo-foot {
-  color: var(--primary-white-color);
-  text-decoration: none;
+
+.address,
+.footer-contacts {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
 }
+
 .address {
   color: var(--primary-white-color);
 }
+
 .footer-contacts .link {
   color: var(--secondary-text-color);
 }
-.footer-section .title {
+
+.footer-social .title {
   color: var(--primary-white-color);
 }
 
-.footer-section .link:hover,
-.footer-section .link:focus {
+.footer-social .link:hover,
+.footer-social .link:focus {
   color: var(--accent-text-color);
 }
-.footer-section .link {
+.footer-social .link {
   color: var(--primary-white-color);
+}
+
+.footer-social .title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
 }
 
 /* Button */
@@ -90,27 +128,77 @@ footer {
   height: 50px;
   background-color: var(--accent-text-color);
   color: var(--primary-white-color);
+
+  font-family: inherit;
 }
 
 /* Main */
 /* Hero section*/
 .hero .title {
   color: var(--primary-white-color);
+  /* ВРЕМЕННОЕ ВЫДЕЛЕНИЕ, ПОКА НЕ ПОЯВИТСЯ ФОН   */
+  background-color: var(--accent-text-color);
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 /* Features section */
+
+.features .title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
 .features .details {
   color: var(--secondary-text-color);
+
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+/* Examples and Team Sections */
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 
 /* Examples section */
+
 .examples .title {
   color: var(--primary-white-color);
+  /* ВРЕМЕННО ДОБАВЛЕН ФОН ДЛЯ ОТОБРАЖЕНИЯ ТЕКСТА */
+  background-color: var(--accent-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* Team section */
+
+.team .name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
 .team .rank {
   color: var(--secondary-text-color);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .team .link {
@@ -122,6 +210,60 @@ footer {
 }
 
 /* Portfolio Page */
-.portfolio .category-mark {
+
+/* Кнопка выбора категорий Portfolio button */
+
+.button {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-bg-color);
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: inherit;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--accent-text-color);
+}
+
+.button.active {
+  color: var(--primary-white-color);
+  background-color: var(--accent-text-color);
+}
+
+.button.sleep {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-bg-color);
+}
+
+/* Portfolio list */
+
+.portfolio .title {
+  color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio .category-tag {
   color: var(--secondary-text-color);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.portfolio .description {
+  color: var(--primary-white-color);
+  background-color: var(--accent-text-color);
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
 }
